--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,6 +27,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-jest": "^29.2.1",
